--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="jumbotron text-center">
-    <h1 class="display-4">¡Bienvenidos a Nuestra Boda!</h1>
+    <h1 class="display-4">¡Nuestra Boda!</h1>
     <p class="lead">Nos casamos el 18 Enero.</p>
     <hr class="my-4">
     <p>Por favor, confirma tu asistencia a través del enlace a continuación.</p>
