--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,28 +1,16 @@
 <div class="jumbotron text-center">
-    <h1 class="display-4">¡Nuestra Boda!</h1>
-    <p class="lead">Nos casamos el 18 Enero.</p>
-    <hr class="my-4">
-    <p>Por favor, confirma tu asistencia a través del enlace a continuación.</p>
-    <a class="btn btn-primary btn-lg" href="#" role="button">Confirmar Asistencia</a>
-  </div>
+  <h1 class="display-4">¡Nuestra Boda!</h1>
+  <p class="lead">Nos casamos el 18 Enero.</p>
+  <hr class="my-4">
+  <p>Por favor, confirma tu asistencia a través del enlace a continuación.</p>
+  <a class="btn btn-primary btn-lg" href="#" role="button">Confirmar Asistencia</a>
+</div>
+
+<div class="container event-details">
+  <h2>Detalles del Evento</h2>
+  <p>Aquí encontrarás toda la información importante sobre nuestro gran día.</p>
+  <app-photo-list></app-photo-list>
   
-  <div class="container">
-    <h2>Detalles del Evento</h2>
-    <p>Aquí encontrarás toda la información importante sobre nuestro gran día.</p>
-    
-    <!-- Sección de mapa, si deseas integrarlo -->
-    <div id="map" style="height: 400px;"></div>
-  
-    <!-- Galería de fotos -->
-    <div class="row">
-      <div class="col-lg-4 col-md-6 mb-4">
-        <img src="assets/photo1.jpg" class="img-fluid rounded" alt="Foto 1">
-      </div>
-      <div class="col-lg-4 col-md-6 mb-4">
-        <img src="assets/photo2.jpg" class="img-fluid rounded" alt="Foto 2">
-      </div>
-      <div class="col-lg-4 col-md-6 mb-4">
-        <img src="assets/photo3.jpg" class="img-fluid rounded" alt="Foto 3">
-      </div>
-    </div>
-  </div>
+  <!-- Sección de mapa, si deseas integrarlo -->
+  <div id="map" style="height: 400px;"></div>
+</div>
