--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -28,3 +28,45 @@
 .jumbotron .lead {
   font-size: 1.25rem; /* Tamaño de fuente ligeramente grande */
 }
+.modal-dialog-centered {
+  margin: 1.75rem auto;
+}
+
+.modal-content {
+  border-radius: 15px;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+}
+
+.modal-header {
+  border-bottom: none;
+  padding: 1.5rem 2rem;
+  background-color: #28a745; /* Color de fondo verde para la cabecera */
+}
+
+.modal-title {
+  font-size: 1.75rem;
+  font-weight: 700;
+}
+
+.close {
+  font-size: 1.75rem;
+}
+
+.btn-primary {
+  background-color: #007bff;
+  border-color: #007bff;
+  border-radius: 25px; /* Bordes redondeados para el botón */
+}
+
+.btn-primary:hover {
+  background-color: #0056b3;
+  border-color: #004085;
+}
+
+.form-group label {
+  font-weight: 600;
+}
+
+.modal-body {
+  padding: 2rem;
+}
